# HVV_display

./: .gitignore  README.md  config.yaml.example  pyproject.toml
hvv_display/: hvv_display.py
hvv_display/hvv_display_client/: __init__.py
hvv_display/hvv_display_client/api/announcement_controller/: get_announcements.py
hvv_display/hvv_display_client/api/check_name_controller/: check_name.py
hvv_display/hvv_display_client/api/departure_course_controller/: departure_course.py
hvv_display/hvv_display_client/api/departure_list_controller/: departure_list.py
hvv_display/hvv_display_client/models/: __init__.py  announcement.py  announcement_request.py  announcement_request_filter_planned.py  announcement_request_filter_type.py  announcement_response.py  announcement_response_return_code.py  attribute.py  bounding_box.py  cn_request.py  cn_request_coordinate_type.py  cn_request_filter_type.py  cn_response.py  cn_response_return_code.py  cont_search_by_service_id.py  coordinate.py  coordinate_type.py  course_element.py  dc_request.py  dc_request_coordinate_type.py  dc_request_filter_type.py  dc_request_segments.py  dc_response.py  dc_response_return_code.py  departure.py  dl_filter_entry.py  dl_request.py  dl_request_filter_type.py  dl_request_service_types_item.py  dl_response.py  dl_response_return_code.py  dl_response_service_types_item.py  elevator.py  elevator_button_type.py  elevator_state.py  gr_request.py  gr_request_coordinate_type.py  gr_request_filter_type.py  gr_request_realtime.py  gr_request_to_dest_by.py  (+140 more)
(+14 files in other folders)
