[tool.poetry]
name = "hvv-display"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hvv_display"}]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.3.0"


[tool.poetry.group.dev.dependencies]
openapi-python-client = "^0.11.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
